# djc-core-html-parser

./: CHANGELOG.md  Cargo.toml  README.md  __init__.pyi  pyproject.toml
.github/workflows/: publish.yml  tests.yml
crates/djc-core/: Cargo.toml
crates/djc-core/src/: lib.rs
crates/djc-html-transformer/: Cargo.toml
crates/djc-html-transformer/src/: lib.rs  transformer.rs
crates/djc-template-parser/: Cargo.toml  README.md
crates/djc-template-parser/src/: ast.rs  error.rs  grammar.pest  lib.rs  tag_compiler.rs  tag_parser.rs
djc_core/: __init__.py  __init__.pyi  djc_template_parser.py  djc_template_parser.pyi
src/: html_parser.rs  lib.rs
tests/: benchmark.py  test_html_parser.py  test_html_transformer.py  test_template_parser_tag_compiler.py  test_template_parser_tag_parser.py
